fix: Removes unnecessary nesting of rateplans
